# greesy

./: .gitignore  CMakeLists.txt  README.md
cmake/: arm-none-eabi.cmake
inc/: dac.hpp  dma.hpp  gpio.hpp  interrupts.hpp  main.hpp  midi.hpp  rcc.hpp  synth.hpp  sysconfig.hpp  tables.hpp  timers.hpp
inc/peripherals/: dac.hpp  flash.hpp  gpio.hpp  interrupts.hpp  rcc.hpp  sysconfig.hpp  timers.hpp  usart.hpp
ld/: stm32f3discovery.ld
src/: core.s  dac.cpp  dma.cpp  gpio.cpp  interrupts.cpp  main.cpp  midi.cpp  rcc.cpp  startup.c  synth.cpp  sysconfig.cpp  timers.cpp  vector_table.s
src/peripherals/: dac.cpp  flash.cpp  gpio.cpp  interrupts.cpp  rcc.cpp  sysconfig.cpp
tests/: CMakeLists.txt  test_main.cpp  test_main.hpp  tests.cpp
